@@ -25,6 +25,7 @@ IMPROVEMENTS / FIXES
 	- Fixes AutoTune infinite fuel not applying to Firespitter helicopter engines.
 	- Remove the requirement of having a WM for the AI to work.
 	- Add the post-terrain avoidance cool-down slider to the AI GUI.
+	- AI now more intelligent about turning on Radars/Sonars; will not automatically turn on Active Sonar if present on a craft.
 - Competition:
 	- Save/load tournament score weights to/from the settings.cfg.
 	- Waypoint Mode max laps can now be set to a user-specified value (WAYPOINT_MAX_LAPS, default 5) in the BDA settings menu.
@@ -33,6 +34,7 @@ IMPROVEMENTS / FIXES
 	- 'Activate Guard After Gate n' setting now ends the course when FFA is complete, not when last alive craft completes the course.
 	- Vengeance Mutator blast radius and delay can now be set in the BDA settings menu.
 	- Don't check for fuel for afterburners if infinite fuel is enabled.
+	- Fix issue with subSystem Battledamage option occasionally setting non-flammable parts/parts without subsystem modules on fire.
 - Weapons:
 	- Fix lasers being able to fire as long as > 0 EC is present.
 	- Add bulletLuminance field for setting non-tracer brightness.
@@ -52,7 +54,9 @@ IMPROVEMENTS / FIXES
 		- Added adapted rangeFac behavior to Kappa guidance to improve guidance performance, particularly for close ranged targets. Now an altitude limit is prescribed for the missile based on 10 * rangeFac * range^(vertVelComp).
 		- Fixed maddog/dumbfire behavior of ARH missiles, missile should now be able to lock onto targets in front of it when launched
 		- Throttle now determines fuel burn, missile burnout for missiles with fuel burn now depends on fuel expenditure rather than just preset burn times.
-		- Fix some typos and inconsistencies in the wording of the right click menu
+		- Fix some typos and inconsistencies in the wording of the right click menu.
+		- Improve logic for when and how AI attempts dumbfire launches when missing requisite senors.
+		- Improve logic for sonar-guided weapons, will no longer try to satisfy sonar need with radars if present.
 - Detectors:
 	- Fixed rare bug where, when spawning in vehicles while the on-screen debug elements are turned on the vessel radar cross-section would update too early, causing the radar cross-section to default to the vessel's mass.
 - RWP:
